--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,6 +1,16 @@
+:root {
+  --body: linear-gradient(44.75deg, #ebf2ff 0%, #fcfdff 100.44%);
+  --blue: #202842;
+  --dark-blue: #151c32;
+  --yellow: #f5a623;
+  --purple: #a6b3e5;
+  --gray: #a2a8bb;
+  --white: #d8d8d8;
+}
+
 * {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   box-sizing: border-box;
-  background: linear-gradient(44.75deg, #ebf2ff 0%, #fcfdff 100.44%);
+  font-family: "Open Sans", sans-serif;
 }
