--- a/src/styles/Container.css
+++ b/src/styles/Container.css
@@ -7,3 +7,20 @@
   margin: auto;
   /* display: none; */
 }
+
+.circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  border: 1px solid var(--purple);
+}
+
+.minCircle {
+  width: 20px;
+  height: 20px;
+  background-color: var(--purple);
+  border-radius: 50%;
+}
