--- a/src/styles/ThirdTip.css
+++ b/src/styles/ThirdTip.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   border-radius: 7px;
   margin: 0 auto;
-  box-shadow: 2px 2px 10px var(--gray);
+  box-shadow: 2px 2px 15px var(--gray);
   padding: 25px 28px;
 }
 
@@ -19,4 +19,16 @@
 .thirdTipContainer footer {
   display: flex;
   justify-content: space-between;
+}
+
+.thirdTipContainer footer small {
+  font-size: 16px;
+  color: #bababc;
+}
+.thirdTipContainer footer button {
+  background-color: var(--yellow);
+  border: none;
+  border-radius: 14px;
+  color: white;
+  padding: 11px 20px;
 }
