--- a/src/styles/FirstTip.css
+++ b/src/styles/FirstTip.css
@@ -1,5 +1,18 @@
 .firstTipContainer {
   margin-bottom: 150px;
+  position: relative;
+}
+
+.firstTipContainer::after {
+  content: "";
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  background-color: var(--blue);
+  bottom: -30px;
+  left: 34px;
+  transform: rotate(45deg);
+  z-index: -1;
 }
 
 .firstTipContainer span {
